k8s/web-scraper/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-scraper
  labels:
    name: web-scraper
    app: web-scraper
