k8s/web-scraper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-scraper
  namespace: web-scraper
  labels:
    app: web-scraper
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: web-scraper
